Fixed a bug with the sticky header and illustrations on smaller screens

--- a/src/styles/components/layout.css
+++ b/src/styles/components/layout.css
@@ -31,7 +31,7 @@
 }
 
 .layout__fade {
-  @apply hidden bg-black fixed top-0 left-0 w-screen h-screen opacity-80 z-10 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-black;
+  @apply hidden bg-black fixed top-0 left-0 w-screen h-screen opacity-80 z-40 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-black;
 }
 
 .layout__fade--open {
@@ -84,7 +84,7 @@
 }
 
 .layout__sidebar--left.layout__sidebar--left-open {
-  @apply bg-gray-100 dark:bg-gray-900 left-0 z-20;
+  @apply bg-gray-100 dark:bg-gray-900 left-0 z-50;
 }
 
 .layout__sidebar--left.layout__sidebar--full {
@@ -104,7 +104,7 @@
 }
 
 .layout__sidebar--right.layout__sidebar--right-open {
-  @apply block right-0 overflow-y-auto overscroll-y-auto z-20;
+  @apply block right-0 overflow-y-auto overscroll-y-auto z-50;
 }
 
 .layout__sidebar--right-fake {
